# chisel

./: .gitignore  build.sbt
.devcontainer/: extract-cmake-arguments  make-devcontainer-singular
.devcontainer/circel/: Dockerfile  devcontainer.json
.devcontainer/circel/VSCode/: launch.json  settings.json  tasks.json
.devcontainer/default/: Dockerfile  devcontainer.json
.devcontainer/default/VSCode/: launch.json  settings.json  tasks.json
.github/workflows/: check-circel-formatting.yml  check-circel-support-scripts.yml  check-circel.yml  check-circt-consistency.yml  check-circt-helper-script.yml  check-scripts.yml  checkCirctBindings.yml  checkCxxFormatting.yml  publish-devcontainer.yml
MLIR-FIRRTL/: GCD.fir.mlir  GCD.parsed-fir.mlir
circel/: CMakeLists.txt
circel/cmake/modules/: AddCIRCEL.cmake  CIRCELConfig.cmake.in  CMakeLists.txt
circel/include/: module.modulemap
circel/include/circel/Bindings/JNI/MLIR/: JNIBuilder.h  JNIContext.h  JNIPassManager.h
circel/include/circel/Bindings/Support/: OpaquePointer.h  ReferenceCountedPointer.h  ScopedBuilder.h  ScopedContext.h  ScopedPassManager.h  Support.h
circel/lib/: CMakeLists.txt
circel/lib/Bindings/: CMakeLists.txt
circel/lib/Bindings/JNI/: CMakeLists.txt  IRBuilder.cpp  IRBuilder.java  NativeUtils.java
circel/lib/Bindings/JNI/FIRRTL/: Attributes.cpp  Attributes.java  CMakeLists.txt  Dialect.cpp  Dialect.java  FirtoolOptions.java  NativeLibrary.java  Operations.cpp  Operations.java  PassManager.cpp  PassManager.java  Types.cpp  Types.java
circel/lib/Bindings/JNI/MLIR/: Attributes.cpp  Attributes.java  Block.cpp  Block.java  Builder.cpp  Builder.java  CMakeLists.txt  Context.cpp  Context.java  Dialect.java  JNIDebugHelpers.cpp  JNIDebugHelpers.h  JNIVersion.cpp  Locations.cpp  Locations.java  NativeLibrary.java  NativeObject.cpp  NativeObject.java  Operations.cpp  Operations.java  PassManager.cpp  PassManager.java  Region.cpp  Region.java  Types.cpp  Types.java  Values.cpp  Values.java
circel/lib/Bindings/Support/: CMakeLists.txt  OpaquePointer.cpp  OpaquePointer.h  ReferenceCountedPointer.cpp  ReferenceCountedPointer.h  ScopeID.h  ScopedBuilder.cpp  ScopedBuilder.h  ScopedContext.cpp  ScopedContext.h  ScopedPassManager.cpp  ScopedPassManager.h  Support.cpp
circel/lib/Stub/: CMakeLists.txt
circel/support/: cmake-helper
circel/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
circel/test/Bindings/: CMakeLists.txt
circel/test/Bindings/JNI/: CMakeLists.txt
circel/test/Bindings/JNI/FIRRTL/: CMakeLists.txt  FIRRTLJNITests.java
circel/test/Bindings/JNI/MLIR/: CMakeLists.txt  MLIRJNITests.java
circel/test/Bindings/Support/: CMakeLists.txt  Test.cpp
circel/test/Bindings/Swift/: CMakeLists.txt  Circel.swift  Test.swift
circel/test/circel-java-test-launcher/: CMakeLists.txt  circel-java-test-launcher.cpp
circel/test/stub/: stub.mlir
circel/tools/: CMakeLists.txt
circel/tools/circel-lsp-server/: CMakeLists.txt  circel-lsp-server.cpp
mlir/: .gitignore  README.md
mlir/circel/include/: module.modulemap
mlir/circel/include/circel/Bindings/Support/: NativeReference.h
mlir/circel/include/mlir-bindings/JNI/: JNIBuilder.h  JNIContext.h
mlir/circel/include/mlir-bindings/Support/: OpaquePointer.h  ReferenceCountedPointer.h  ScopedBuilder.h  ScopedContext.h
mlir/circel/lib/Bindings/: CMakeLists.txt
mlir/circel/lib/Bindings/JNI/: CMakeLists.txt
mlir/circel/lib/Bindings/JNI/MLIR/: Attributes.cpp  Attributes.java  Block.cpp  Builder.cpp  Builder.java  CMakeLists.txt  Context.cpp  Context.java  JNIDebugHelpers.cpp  JNIDebugHelpers.h  Locations.cpp  NativeLibrary.java  NativeObject.cpp  Operations.cpp  Region.cpp  Types.cpp  Values.cpp
mlir/circel/lib/Bindings/Support/: CMakeLists.txt  OpaquePointer.cpp  OpaquePointer.h  ReferenceCountedPointer.cpp  ReferenceCountedPointer.h  ScopeID.h  ScopedBuilder.cpp  ScopedBuilder.h  ScopedContext.cpp  ScopedContext.h
mlir/circel/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/circel/test/Bindings/: CMakeLists.txt
mlir/circel/test/Bindings/JNI/: CMakeLists.txt  lit.local.cfg
mlir/circel/test/Bindings/JNI/MLIR/: CMakeLists.txt  MLIRJNITests.java
mlir/circel/test/Bindings/Support/: CMakeLists.txt  NativeReferenceTest.cpp  NativeReferenceTest.h  Test.cpp
mlir/circel/test/Bindings/Swift/: BindingsTest.swift
mlir/llvm/llvm/cmake/modules/: HandleLLVMOptions.cmake
mlir/support/: circt-helper  circt.sha  cmake-helper  update-circt
mlir/support/metadata/: circt.sha  llvm.diff  llvm.sha
src/main/scala/chisel3/simulator/: package.scala
src/test/scala/chiselTests/simulator/: EphemeraSimulatorSpec.scala  GCD.scala
